--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+	--color-minimal-purple: #7635dc;
+
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--font-sans: var(--font-geist-sans);
