feat: implement light-dark modes properly and some more improvements in the ui. closes #3

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,6 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-	--color-dark: #17181d;
-	--color-back: #121212;
-	--color-dark-card: #151515;
-	--color-dark-border: #181818;
-
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--font-sans: var(--font-geist-sans);
@@ -62,8 +57,9 @@
 :root {
 	--radius: 0.625rem;
 	--background: oklch(1 0 0);
+	--card: oklch(0.98 0 0);
+	--border: oklch(0.95 0 0);
 	--foreground: oklch(0.141 0.005 285.823);
-	--card: oklch(1 0 0);
 	--card-foreground: oklch(0.141 0.005 285.823);
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.141 0.005 285.823);
@@ -76,7 +72,6 @@
 	--accent: oklch(0.967 0.001 286.375);
 	--accent-foreground: oklch(0.21 0.006 285.885);
 	--destructive: oklch(0.577 0.245 27.325);
-	--border: oklch(0.92 0.004 286.32);
 	--input: oklch(0.92 0.004 286.32);
 	--ring: oklch(0.705 0.015 286.067);
 	--chart-1: oklch(0.646 0.222 41.116);
@@ -95,11 +90,12 @@
 }
 
 .dark {
-	--background: oklch(0.141 0.005 285.823);
+	--background: #111111;
+	--card: #151515;
+	--border: #181818;
+	--popover: #151515;
 	--foreground: oklch(0.985 0 0);
-	--card: oklch(0.21 0.006 285.885);
 	--card-foreground: oklch(0.985 0 0);
-	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
 	--primary: oklch(0.92 0.004 286.32);
 	--primary-foreground: oklch(0.21 0.006 285.885);
@@ -110,7 +106,6 @@
 	--accent: oklch(0.274 0.006 286.033);
 	--accent-foreground: oklch(0.985 0 0);
 	--destructive: oklch(0.704 0.191 22.216);
-	--border: oklch(1 0 0 / 10%);
 	--input: oklch(1 0 0 / 15%);
 	--ring: oklch(0.552 0.016 285.938);
 	--chart-1: oklch(0.488 0.243 264.376);
@@ -126,4 +121,18 @@
 	--sidebar-accent-foreground: oklch(0.985 0 0);
 	--sidebar-border: oklch(1 0 0 / 10%);
 	--sidebar-ring: oklch(0.552 0.016 285.938);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+	-webkit-box-shadow: 0 0 0 1000px #f8f8f8 inset !important;
+	-webkit-text-fill-color: #000 !important;
+}
+
+.dark input:-webkit-autofill,
+.dark input:-webkit-autofill:hover,
+.dark input:-webkit-autofill:focus {
+	-webkit-box-shadow: 0 0 0 1000px #151515 inset !important;
+	-webkit-text-fill-color: #fff !important;
 }
